# market-ecology

./: .gitmodules  CMakeLists.txt  financial_ratios.hpp  fund.cpp  fund.hpp  main.cpp  traded_company.cpp  traded_company.hpp
analysis/: Market Prices and Net Asset Value.ipynb
experiment/: e_3_grid.cpp  e_3_grid.hpp  e_4_trajectories.cpp  e_4_trajectories.hpp  e_5.cpp  e_6.cpp  e_6.hpp  experiment_1_population_fluctuations.cpp  experiment_1_population_fluctuations.hpp  experiment_2_statistics.cpp  experiment_2_statistics.hpp  experiment_3_simplex.cpp  experiment_3_simplex.hpp  experiment_4_trajectories.cpp  experiment_4_trajectories.hpp  experiment_5_flows.cpp  experiment_5_flows.hpp  experiment_6_kelly.cpp  experiment_6_kelly.hpp
python/: main.py  requirements.txt
strategies/: constant_demand.cpp  constant_demand.hpp  kelly_bettor.cpp  kelly_bettor.hpp  noise_trader.cpp  noise_trader.hpp
strategies/fundamental_value/: dividend_discount.cpp  dividend_discount.hpp  mean_reverting_noise.cpp  mean_reverting_noise.hpp
strategies/technical/: momentum.cpp  momentum.hpp  trend_follower.cpp  trend_follower.hpp
